css fixes for small screen email address overflow.

--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -17,6 +17,11 @@
   margin-top: 100px;
 
 }
+@media only screen and (max-width: 650px) {
+  .Email {
+    font-size: 15pt;
+  }
+}
 
 u {
   text-decoration-color: #F2C94C;
@@ -50,6 +55,3 @@ a:hover {
   color: #777777;
 }
 
-
-
-.Links {}
